Removed unneeded styles from html and body such as overflow-x-hidden. It fixed some odd layout issues. Removed full-bleed from pages as it also messed with the layout

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,12 +10,11 @@
   }
 
   html {
-    @apply scroll-smooth antialiased;
+    @apply h-full scroll-smooth antialiased;
   }
 
-  html,
   body {
-    @apply h-full max-w-[100vw] overflow-x-hidden;
+    @apply min-h-full;
   }
 
   h1,
